Data Preparation notebook

--- a/Data Preparation.ipynb
+++ b/Data Preparation.ipynb
@@ -502,8 +502,6 @@
        "      <th></th>\n",
        "      <th>index</th>\n",
        "      <th>location</th>\n",
-       "      <th>related_events</th>\n",
-       "      <th>shot_end_location</th>\n",
        "      <th>shot_technique</th>\n",
        "      <th>shot_body_part</th>\n",
        "      <th>shot_type</th>\n",
@@ -529,8 +527,6 @@
        "      <th>0</th>\n",
        "      <td>183</td>\n",
        "      <td>[104.1, 27.2]</td>\n",
-       "      <td>[32cfd094-de56-4749-b2fb-a2181cdc6237, cb67971...</td>\n",
-       "      <td>[107.7, 30.2]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Left Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -554,8 +550,6 @@
        "      <th>1</th>\n",
        "      <td>750</td>\n",
        "      <td>[111.3, 27.5]</td>\n",
-       "      <td>[8bc375e4-e957-4e83-b665-ccaea88a3cbf]</td>\n",
-       "      <td>[120.0, 36.4, 2.4]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Left Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -579,8 +573,6 @@
        "      <th>2</th>\n",
        "      <td>858</td>\n",
        "      <td>[101.4, 36.8]</td>\n",
-       "      <td>[1e8be93a-19d4-4a99-8087-64645f1fb76b]</td>\n",
-       "      <td>[118.0, 38.6, 0.8]</td>\n",
        "      <td>Half Volley</td>\n",
        "      <td>Right Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -604,8 +596,6 @@
        "      <th>3</th>\n",
        "      <td>899</td>\n",
        "      <td>[100.7, 32.2]</td>\n",
-       "      <td>[5771283a-9d06-4471-8c48-b6fe96d521ea]</td>\n",
-       "      <td>[116.8, 38.0, 0.0]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Right Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -629,8 +619,6 @@
        "      <th>4</th>\n",
        "      <td>1108</td>\n",
        "      <td>[87.2, 46.1]</td>\n",
-       "      <td>[260c2713-6dc6-4ffe-841d-2175a128c93a]</td>\n",
-       "      <td>[118.9, 43.9, 0.3]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Left Foot</td>\n",
        "      <td>Free Kick</td>\n",
@@ -655,19 +643,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   index       location                                     related_events  \\\n",
-       "0    183  [104.1, 27.2]  [32cfd094-de56-4749-b2fb-a2181cdc6237, cb67971...   \n",
-       "1    750  [111.3, 27.5]             [8bc375e4-e957-4e83-b665-ccaea88a3cbf]   \n",
-       "2    858  [101.4, 36.8]             [1e8be93a-19d4-4a99-8087-64645f1fb76b]   \n",
-       "3    899  [100.7, 32.2]             [5771283a-9d06-4471-8c48-b6fe96d521ea]   \n",
-       "4   1108   [87.2, 46.1]             [260c2713-6dc6-4ffe-841d-2175a128c93a]   \n",
-       "\n",
-       "    shot_end_location shot_technique shot_body_part  shot_type shot_outcome  \\\n",
-       "0       [107.7, 30.2]         Normal      Left Foot  Open Play      Blocked   \n",
-       "1  [120.0, 36.4, 2.4]         Normal      Left Foot  Open Play         Goal   \n",
-       "2  [118.0, 38.6, 0.8]    Half Volley     Right Foot  Open Play        Saved   \n",
-       "3  [116.8, 38.0, 0.0]         Normal     Right Foot  Open Play        Saved   \n",
-       "4  [118.9, 43.9, 0.3]         Normal      Left Foot  Free Kick        Saved   \n",
+       "   index       location shot_technique shot_body_part  shot_type shot_outcome  \\\n",
+       "0    183  [104.1, 27.2]         Normal      Left Foot  Open Play      Blocked   \n",
+       "1    750  [111.3, 27.5]         Normal      Left Foot  Open Play         Goal   \n",
+       "2    858  [101.4, 36.8]    Half Volley     Right Foot  Open Play        Saved   \n",
+       "3    899  [100.7, 32.2]         Normal     Right Foot  Open Play        Saved   \n",
+       "4   1108   [87.2, 46.1]         Normal      Left Foot  Free Kick        Saved   \n",
        "\n",
        "                                   shot_freeze_frame shot_first_time  \\\n",
        "0  [{'location': [105.8, 49.8], 'player': {'id': ...            None   \n",
@@ -707,7 +688,8 @@
     "# Dropping columns\n",
     "columns_to_drop= [\"id\", \"period\", \"timestamp\", \"minute\", \"second\", \"type\", \"possession\",\n",
     "                  \"possession_team\", \"play_pattern\", \"team\", \"player\", \"position\", \"duration\",\n",
-    "                  \"match_id\", \"shot_key_pass_id\", \"shot_statsbomb_xg\", \"possession_team_id\", \"player_id\"]\n",
+    "                  \"match_id\", \"shot_key_pass_id\", \"shot_statsbomb_xg\", \"possession_team_id\",\n",
+    "                  \"player_id\", \"shot_end_location\", \"related_events\"]\n",
     "\n",
     "df= df.drop(columns= columns_to_drop)\n",
     "df.head()"
@@ -742,8 +724,6 @@
        "      <th></th>\n",
        "      <th>index</th>\n",
        "      <th>location</th>\n",
-       "      <th>related_events</th>\n",
-       "      <th>shot_end_location</th>\n",
        "      <th>shot_technique</th>\n",
        "      <th>shot_body_part</th>\n",
        "      <th>shot_type</th>\n",
@@ -758,8 +738,6 @@
        "      <th>0</th>\n",
        "      <td>183</td>\n",
        "      <td>[104.1, 27.2]</td>\n",
-       "      <td>[32cfd094-de56-4749-b2fb-a2181cdc6237, cb67971...</td>\n",
-       "      <td>[107.7, 30.2]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Left Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -772,8 +750,6 @@
        "      <th>1</th>\n",
        "      <td>750</td>\n",
        "      <td>[111.3, 27.5]</td>\n",
-       "      <td>[8bc375e4-e957-4e83-b665-ccaea88a3cbf]</td>\n",
-       "      <td>[120.0, 36.4, 2.4]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Left Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -786,8 +762,6 @@
        "      <th>2</th>\n",
        "      <td>858</td>\n",
        "      <td>[101.4, 36.8]</td>\n",
-       "      <td>[1e8be93a-19d4-4a99-8087-64645f1fb76b]</td>\n",
-       "      <td>[118.0, 38.6, 0.8]</td>\n",
        "      <td>Half Volley</td>\n",
        "      <td>Right Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -800,8 +774,6 @@
        "      <th>3</th>\n",
        "      <td>899</td>\n",
        "      <td>[100.7, 32.2]</td>\n",
-       "      <td>[5771283a-9d06-4471-8c48-b6fe96d521ea]</td>\n",
-       "      <td>[116.8, 38.0, 0.0]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Right Foot</td>\n",
        "      <td>Open Play</td>\n",
@@ -814,8 +786,6 @@
        "      <th>4</th>\n",
        "      <td>1108</td>\n",
        "      <td>[87.2, 46.1]</td>\n",
-       "      <td>[260c2713-6dc6-4ffe-841d-2175a128c93a]</td>\n",
-       "      <td>[118.9, 43.9, 0.3]</td>\n",
        "      <td>Normal</td>\n",
        "      <td>Left Foot</td>\n",
        "      <td>Free Kick</td>\n",
@@ -829,19 +799,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   index       location                                     related_events  \\\n",
-       "0    183  [104.1, 27.2]  [32cfd094-de56-4749-b2fb-a2181cdc6237, cb67971...   \n",
-       "1    750  [111.3, 27.5]             [8bc375e4-e957-4e83-b665-ccaea88a3cbf]   \n",
-       "2    858  [101.4, 36.8]             [1e8be93a-19d4-4a99-8087-64645f1fb76b]   \n",
-       "3    899  [100.7, 32.2]             [5771283a-9d06-4471-8c48-b6fe96d521ea]   \n",
-       "4   1108   [87.2, 46.1]             [260c2713-6dc6-4ffe-841d-2175a128c93a]   \n",
-       "\n",
-       "    shot_end_location shot_technique shot_body_part  shot_type shot_outcome  \\\n",
-       "0       [107.7, 30.2]         Normal      Left Foot  Open Play      Blocked   \n",
-       "1  [120.0, 36.4, 2.4]         Normal      Left Foot  Open Play         Goal   \n",
-       "2  [118.0, 38.6, 0.8]    Half Volley     Right Foot  Open Play        Saved   \n",
-       "3  [116.8, 38.0, 0.0]         Normal     Right Foot  Open Play        Saved   \n",
-       "4  [118.9, 43.9, 0.3]         Normal      Left Foot  Free Kick        Saved   \n",
+       "   index       location shot_technique shot_body_part  shot_type shot_outcome  \\\n",
+       "0    183  [104.1, 27.2]         Normal      Left Foot  Open Play      Blocked   \n",
+       "1    750  [111.3, 27.5]         Normal      Left Foot  Open Play         Goal   \n",
+       "2    858  [101.4, 36.8]    Half Volley     Right Foot  Open Play        Saved   \n",
+       "3    899  [100.7, 32.2]         Normal     Right Foot  Open Play        Saved   \n",
+       "4   1108   [87.2, 46.1]         Normal      Left Foot  Free Kick        Saved   \n",
        "\n",
        "                                   shot_freeze_frame shot_first_time  \\\n",
        "0  [{'location': [105.8, 49.8], 'player': {'id': ...            None   \n",
@@ -906,6 +869,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7e42b69d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values of Shot_body_part column: ['Left Foot' 'Right Foot' 'Head' 'Other']\n",
+      "Unique values of Shot_outcome column: ['Blocked' 'Goal' 'Saved' 'Off T' 'Wayward' 'Post' 'Saved to Post'\n",
+      " 'Saved Off Target']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Unique values of Shot_body_part column: \"+ str(df.shot_body_part.unique())+ \"\\n\"+ \n",
+    "      \"Unique values of Shot_outcome column: \"+ str(df.shot_outcome.unique()) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42233152",
+   "metadata": {},
+   "source": [
+    "- A player can shoot the ball with his or her foot (either right or left), head, or other body parts. It makes appropriate to divide the column values into three categories: foot, head, and other.\n",
+    "\n",
+    "- A shot either results in a goal or does not. As a result, we'll mark shots as either Goal or No_Goal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "32cdaaaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"shot_body_part\"]= df[\"shot_body_part\"].replace([\"Left Foot\",\"Right Foot\"], \"Foot\")\n",
+    "\n",
+    "df[\"shot_outcome\"]= df[\"shot_outcome\"].replace([\"Blocked\", \"Saved\", \"Off T\", \"Wayward\", \"Post\", \"Saved to Post\",\n",
+    "                                                \"Saved Off Target\"], \"No_Goal\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4c922e10",
    "metadata": {},
@@ -919,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c577f74a",
    "metadata": {},
    "outputs": [
@@ -945,8 +952,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>index</th>\n",
-       "      <th>related_events</th>\n",
-       "      <th>shot_end_location</th>\n",
        "      <th>shot_technique</th>\n",
        "      <th>shot_body_part</th>\n",
        "      <th>shot_type</th>\n",
@@ -962,12 +967,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>183</td>\n",
-       "      <td>[32cfd094-de56-4749-b2fb-a2181cdc6237, cb67971...</td>\n",
-       "      <td>[107.7, 30.2]</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>Left Foot</td>\n",
+       "      <td>Foot</td>\n",
        "      <td>Open Play</td>\n",
-       "      <td>Blocked</td>\n",
+       "      <td>No_Goal</td>\n",
        "      <td>[{'location': [105.8, 49.8], 'player': {'id': ...</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -977,10 +980,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>750</td>\n",
-       "      <td>[8bc375e4-e957-4e83-b665-ccaea88a3cbf]</td>\n",
-       "      <td>[120.0, 36.4, 2.4]</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>Left Foot</td>\n",
+       "      <td>Foot</td>\n",
        "      <td>Open Play</td>\n",
        "      <td>Goal</td>\n",
        "      <td>[{'location': [85.5, 24.6], 'player': {'id': 3...</td>\n",
@@ -992,12 +993,10 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>858</td>\n",
-       "      <td>[1e8be93a-19d4-4a99-8087-64645f1fb76b]</td>\n",
-       "      <td>[118.0, 38.6, 0.8]</td>\n",
        "      <td>Half Volley</td>\n",
-       "      <td>Right Foot</td>\n",
+       "      <td>Foot</td>\n",
        "      <td>Open Play</td>\n",
-       "      <td>Saved</td>\n",
+       "      <td>No_Goal</td>\n",
        "      <td>[{'location': [96.5, 59.6], 'player': {'id': 1...</td>\n",
        "      <td>True</td>\n",
        "      <td>None</td>\n",
@@ -1007,12 +1006,10 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>899</td>\n",
-       "      <td>[5771283a-9d06-4471-8c48-b6fe96d521ea]</td>\n",
-       "      <td>[116.8, 38.0, 0.0]</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>Right Foot</td>\n",
+       "      <td>Foot</td>\n",
        "      <td>Open Play</td>\n",
-       "      <td>Saved</td>\n",
+       "      <td>No_Goal</td>\n",
        "      <td>[{'location': [93.5, 47.8], 'player': {'id': 3...</td>\n",
        "      <td>True</td>\n",
        "      <td>None</td>\n",
@@ -1022,12 +1019,10 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1108</td>\n",
-       "      <td>[260c2713-6dc6-4ffe-841d-2175a128c93a]</td>\n",
-       "      <td>[118.9, 43.9, 0.3]</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>Left Foot</td>\n",
+       "      <td>Foot</td>\n",
        "      <td>Free Kick</td>\n",
-       "      <td>Saved</td>\n",
+       "      <td>No_Goal</td>\n",
        "      <td>[{'location': [99.6, 36.7], 'player': {'id': 2...</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -1039,19 +1034,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   index                                     related_events  \\\n",
-       "0    183  [32cfd094-de56-4749-b2fb-a2181cdc6237, cb67971...   \n",
-       "1    750             [8bc375e4-e957-4e83-b665-ccaea88a3cbf]   \n",
-       "2    858             [1e8be93a-19d4-4a99-8087-64645f1fb76b]   \n",
-       "3    899             [5771283a-9d06-4471-8c48-b6fe96d521ea]   \n",
-       "4   1108             [260c2713-6dc6-4ffe-841d-2175a128c93a]   \n",
-       "\n",
-       "    shot_end_location shot_technique shot_body_part  shot_type shot_outcome  \\\n",
-       "0       [107.7, 30.2]         Normal      Left Foot  Open Play      Blocked   \n",
-       "1  [120.0, 36.4, 2.4]         Normal      Left Foot  Open Play         Goal   \n",
-       "2  [118.0, 38.6, 0.8]    Half Volley     Right Foot  Open Play        Saved   \n",
-       "3  [116.8, 38.0, 0.0]         Normal     Right Foot  Open Play        Saved   \n",
-       "4  [118.9, 43.9, 0.3]         Normal      Left Foot  Free Kick        Saved   \n",
+       "   index shot_technique shot_body_part  shot_type shot_outcome  \\\n",
+       "0    183         Normal           Foot  Open Play      No_Goal   \n",
+       "1    750         Normal           Foot  Open Play         Goal   \n",
+       "2    858    Half Volley           Foot  Open Play      No_Goal   \n",
+       "3    899         Normal           Foot  Open Play      No_Goal   \n",
+       "4   1108         Normal           Foot  Free Kick      No_Goal   \n",
        "\n",
        "                                   shot_freeze_frame shot_first_time  \\\n",
        "0  [{'location': [105.8, 49.8], 'player': {'id': ...            None   \n",
@@ -1068,7 +1056,7 @@
        "4           None   61.023026  18.650737  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4d6493f7",
    "metadata": {},
    "outputs": [],
